k8s/services/hedgedoc/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 1573
        runAsGroup: 1573
        fsGroup: 1573
      containers:
        - name: hedgedoc
          image: quay.io/hedgedoc/hedgedoc
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
