k8s/services/hedgedoc/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hedgedoc
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - md.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: hedgedoc
          port: 80
