k8s/services/hedgedoc/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: md.lama-corp.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hedgedoc
                port:
                  name: http
  tls:
    - hosts:
        - md.lama-corp.space
      secretName: hedgedoc-tls
